# SakuraOS

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.sh  i386.cmake  iso.sh  qemu.sh
Kernel/: CMakeLists.txt  Elf.cpp  Elf.h  ExceptionHandler.cpp  InterruptHandler.cpp  InterruptHandler.h  Kernel.cpp  Multiboot.cpp  Multiboot.h  RingBuffer.h  Scheduler.cpp  Scheduler.h  Syscalls.cpp  Syscalls.h  kernel.cpp
Kernel/Arch/i386/: Arch.h  GDT.cpp  IDT.cpp  IDT.h  IDt.cpp  Linker.ld  Paging.S  Serial.cpp  interrupts.S  taskswitch.S  tty.cpp
Kernel/Arch/i386/Include/: Arch.h  GDT.h
Kernel/Devices/: Device.h  Keyboard.cpp  Keyboard.h  PCIEnumerator.cpp  PCIEnumerator.h  TTY.cpp  TTY.h
Kernel/Include/: Elf.h  InterruptHandler.h  Multiboot.h  RingBuffer.h  Scheduler.h
Kernel/Include/Devices/: Keyboard.h
Kernel/Include/Libk/: Atomic.h  CPP.h
Kernel/Include/MemoryManager/: MemoryManager.h  Paging.h  PhysicalAllocator.h  VirtualMemoryManager.h
Kernel/Libk/: CPP.cpp  Libk.cpp  Libk.h  RingBuffer.h  kmalloc.cpp  kmalloc.h
Kernel/MemoryManager/: MemoryManager.cpp  MemoryManager.h  PhysicalAllocator.cpp  PhysicalAllocator.h  VirtualMemoryManager.cpp
Kernel/VirtualFS/: VirtualFIle.h
Kernel/arch/i386/: Interrupts.cpp
Kernel/include/: MemoryManager.h  Multiboot.h  Scheduler.h
Kernel/memorymanager/: MemoryManager.cpp  PhysicalAllocator.cpp  VirtualMemoryManager.cpp  kmalloc.cpp
kernel/: CMakeLists.txt  Makefile  Multiboot.cpp  Scheduler.cpp  Syscalls.cpp  elf.cpp  gdt.cpp  interrupthandler.cpp  kernel.cpp  multiboot.cpp  scheduler.cpp  syscalls.cpp
kernel/MemoryManager/: MemoryManager.cpp  PhysicalAllocator.cpp  VirtualMemoryManager.cpp  paging.cpp  virtual.cpp
kernel/arch/i386/: arch.h  boot.S  crt0.S  gdt.S  gdt.cpp  idt.cpp  idt.h  interrupts.S  interrupts.cpp  interrupts.h  irq.S  linker.ld  make.config  paging.S  paging_as.S  serial.c  serial.cpp  syscall.S  tty.c  tty.cpp
kernel/arch/i386/include/: io.h
kernel/include/: MemoryManager.h  Multiboot.h  Paging.h  PhysicalAllocator.h  Scheduler.h  Syscalls.h  VirtualMemoryManager.h  elf.h  kmalloc.h  memorymanager.h  multiboot.h  paging.h  physical.h  ringbuffer.h  scheduler.h  serial.h  task.h  tty.h  virtual.h  virtualmemorymanager.h
kernel/include/kernel/: gdt.hpp2  paging.h  scheduler.h  serial.h  tty.h  virtual.h
kernel/kernel/: SwitchToTask.s  gdt.cpp  gdt.cpp2  interrupts.cpp  irq.S  kernel.c  kernel.cpp  paging.c  paging.cpp  physical.c  scheduler.cpp  virtual.c  virtual.cpp
kernel/libk/: abort.cpp  atomic.h  kstdio.cpp  kstdio.h  kstring.h  libk.cpp  libk.h  printf.c  printf.h  string.cpp  vsnprintf.c
kernel/libk/include/: string.h
kernel/libk/libc/: memcpy.c  string.h
kernel/libk/string/: memcpy.c
kernel/mem/: paging.cpp  physical.cpp  virtual.cpp
kernel/memorymanager/: kmalloc.cpp  memorymanager.cpp  physicalallocator.cpp  virtualmemorymanager.cpp
libc/: Makefile
libc/include/: string.h
libc/stdio/: printf.c  putchar.c
libc/string/: strcpy.c
modules/: Makefile  build.sh  fuck1.txt  fuck2.txt  program.c  program.s
newlib/: build.sh  config.sub
newlib/autobin/share/autoconf/: autom4te.cfg
newlib/autobin/share/autoconf/autotest/: autotest.m4f
newlib/autobin/share/autoconf/m4sugar/: m4sh.m4f  m4sugar.m4f
newlib/autobin/share/info/: dir
newlib/autom4te.cache/: traces.0t
newlib/build1/lib/: Makefile
newlib/build1/lib/Autom4te/: Makefile
newlib/build1/lib/Automake/: Config.pm  Makefile
newlib/build1/lib/Automake/tests/: Makefile
newlib/build1/lib/am/: Makefile
newlib/build1/lib/autoconf/: Makefile  autoconf.m4f
newlib/build1/lib/autoscan/: Makefile
newlib/build1/lib/autotest/: Makefile
newlib/build1/lib/emacs/: Makefile
newlib/build1/lib/m4sugar/: Makefile
newlib/newlib/: configure.host
newlib/newlib/libc/sys/: configure  configure.in
newlib/newlib/libc/sys/autom4te.cache/: output.0  requests  traces.0
newlib/newlib/libc/sys/sakura/: Makefile  Syscalls.c  config.status  configure  syscalls.c  syscalls.h
newlib/newlib/libc/sys/sakura/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
scripts/: iso.sh  qemu-debug.sh
sysroot/usr/include/kernel/: interrupts.hpp  io.h  multiboot.h  scheduler.h  tty.h
toolchain/: binutils.patch  gcc.patch  toolchain.sh
